# XcpcCode

./: .clang-format  .gitignore  001.cpp  CMakeLists.txt  C_Bingo_2.cpp  D_GCD_sequence.cpp  D_Masked_Popcount.cpp  README.md  main  main.cpp
.cph/: .A_Buy_a_Pen.cpp_c8a66b8d65cd81c9d63ac761bb76f830.prob  .A_Creating_Words.cpp_6d19656ee94b9712d44fdba7845b2a43.prob  .A_Problem_Generator.cpp_d4f09bcefbbbd0231ffd9160a66a40d4.prob  .A_Sanitize_Hands.cpp_a126c6d1591d34ad5abf684cde3f9251.prob  .A_Subsegment_Reverse.cpp_cef393e3018062f580d64f3dedef4c1a.prob  .A_Who_Ate_the_Cake.cpp_b6f2a03160c4a80c17e301a4dfd6df36.prob  .B_Choosing_Cubes.cpp_2d81e3a2099f1b050bc8398c7506c838.prob  .B_Nutrients.cpp_74af1fc4733b49dac82880c0a75e3712.prob  .B_Piano_2.cpp_230c8e1c1dee3db7736d08ecda984a23.prob  .B_Right_Triangle.cpp_a4cd1520982e390881021ed4e0ca18e6.prob  .B_Uppercase_and_Lowercase.cpp_0a92c85abe7b2197a8fa9babaacb1646.prob  .C_Bingo_2.cpp_cf22851fb938a265af300f566f008bcb.prob  .C_Keys.cpp_e620382cfad8776c462bd630859406a2.prob  .C_Sierpinski_carpet.cpp_e3c85311f7ddbfd08f38e6ac27eefe57.prob  .C_Sofia_and_the_Lost_Operations.cpp_c1c883703c1a4f4195539972e3e56e70.prob  .C_Sum_0.cpp_50f6172acd43211043467c098fc3d9b9.prob  .D_88888888.cpp_bc436a3dcd08db503d2512a623270a4b.prob  .D_GCD_sequence.cpp_86da2a96c43a0d8c7314fc15247a3e47.prob  .D_Masked_Popcount.cpp_19e21035df96538a0288821c79504fb6.prob  .D_Shortest_Path_3.cpp_e44ef50f9bdfbfec7ed01ed11b62e0f4.prob  .E_Count_Arithmetic_Subsequences.cpp_a6ac7a4379fdd648dc351e2759e032e6.prob  .P_1196_NOI_2002_银河英雄传说.cpp_1dcc921e390dee13c1e1ade391089084.prob  (+2 more)
(+252 files in other folders)
